--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
   <div class="col-xs-12 header_div text-center">
-    <h2>sound control aliens</h2>
+    <h2>ANIMAL SOUND Identification</h2>
     <p>
       <b>Note:</b>
-      play diffrent sounds like clap,booo,wooohooo,and bell to make the aliens dance
+      play diffrent sounds like booo,woof,roar,or meow
     </p>
   </div>
 <div class-"main_div">
@@ -25,10 +25,12 @@
 <h3 id="result_label">I can hear- </h3>
 <h3 id="result_confidence">accuracy- </h3>
 <br>
-<img src="aliens-01.png" id="alien1" width="300" height="300" >
-<img src="aliens-02.png" id="alien2" width="300" height="300" >
-<img src="aliens-03.png" id="alien3" width="300" height="300" >
-<img src="aliens-04.png" id="alien4" width="300" height="300" >
+<img src="https://www.akcpetinsurance.com/res/akc/images/icons/home/home_dog.png" id="DOG" width="300" height="300" >
+<img src="https://i.kym-cdn.com/entries/icons/original/000/026/638/cat.jpg" id="CAT" width="300" height="300" >
+<img src="https://i.kym-cdn.com/entries/icons/original/000/028/626/cover3.jpg" id="COW" width="300" height="300" >
+<img src="https://images-cdn.9gag.com/photo/ayBEwQr_700b.jpg" id="LION" width="300" height="300" >
+
+
   </center>
 </div>
 <div class="copy_right_footer">Developed by Rafi</div>
